# Tannic-NN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main  main.cpp  main.sh  serialization.hpp  server.hpp  test.sh  vit.cpp
cmake/: CMakeLists.txt
data/: dev-embd.metadata.tannic  dev-embd.tannic
docs/: Serialization.md
examples/: simple-server.cpp  simple.cpp
examples/mnist/: README.md  client.py  cnn.hpp  dataset.hpp  main.cpp  mlp.hpp  model.hpp  serialization.hpp  server.hpp  train.py
examples/mnist/data/: CNN.tannic  MLP.metadata.tannic  MLP.tannic  mlp.cnet  mlp.metadata.cnet
include/: tannic-nn.hpp
include/tannic-nn/: Activations.hpp  Convolutional.hpp  Embeddings.hpp  Functional.hpp  Modules.hpp  Normalization.hpp  Parameters.hpp  convolutional.hpp  embeddings.hpp  functional.hpp  modules.hpp  normalization.hpp  parameters.hpp
src/: Activations.cpp  Embeddings.cpp  Functional.cpp  Parameters.cpp  embeddings.cpp  functional.cpp  parameters.cpp
src/cpu/: actvs.cpp  actvs.hpp  cpu.hpp  emb.cpp  emb.hpp  softmax.cpp  softmax.hpp
src/cuda/: actvs.cu  actvs.cuh  emb.cu  emb.cuh  exc.cuh  mem.cu  mem.cuh  softmax.cu  softmax.cuh
tests/: test-modules.cpp  test-parameters.cpp
tests/cpu/: test-activations.cpp  test-convolutional.cpp  test-embeddings.cpp  test-normalization.cpp  test-softmax.cpp
tests/cuda/: test-activations.cpp  test-cuda-activations.cpp  test-cuda-embeddings.cpp  test-cuda-softmax.cpp  test-normalization.cpp
trash/: main.cpp  vit.cpp
